appId: com.reown.appkit.expomultichain
---
- launchApp:
    clearState: true
- takeScreenshot: onramp-step-00-home-screen
- startRecording: onramp-video
- runFlow: flows/connect-wallet-flow.yaml
- tapOn:
    id: account-button
- tapOn:
    id: button-onramp
- takeScreenshot: onramp-step-01-button-onramp
- tapOn:
    id: button-onramp-settings
- waitForAnimationToEnd
- takeScreenshot: onramp-step-02-button-onramp-settings
- tapOn:
    id: button-select-country
- takeScreenshot: onramp-step-03-button-select-country
- tapOn: Search country
- inputText: United States
- takeScreenshot: onramp-step-04-settings-screen
- tapOn:
    id: country-item-US
- assertVisible: US Dollar
- tapOn:
    id: button-back
- takeScreenshot: onramp-step-05-main-screen
- assertVisible:
    id: payment-method-button
- tapOn:
    id: key-2
- assertVisible:
    id: currency-input-error
- tapOn:
    id: key-0
- assertNotVisible: Enter a valid amount
- takeScreenshot: onramp-step-06-main-screen
- waitForAnimationToEnd
- assertNotVisible:
    id: currency-input-error

- tapOn: Continue
- takeScreenshot: onramp-step-07-checkout-screen
- assertVisible: Checkout
- tapOn: Confirm
- takeScreenshot: onramp-step-08-loading-screen
- waitForAnimationToEnd
- takeScreenshot: onramp-step-09-browser
- waitForAnimationToEnd

- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn:
          id: breadcrumb

- runFlow:
    when:
      platform: Android
    commands:
      - back

- takeScreenshot: onramp-step-10-back-to-app
- assertVisible: Please wait while we redirect you to finalize your purchase.
- tapOn:
    id: button-back
- tapOn:
    id: button-back
- tapOn:
    id: button-back
- takeScreenshot: onramp-step-11-back-to-app
- tapOn:
    id: button-disconnect
